--- a/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/index.html
@@ -15,8 +15,8 @@
         <div id="hide"></div>
         <div id="control" class="header" style="justify-items: center;grid-template-columns: 1fr 0.5fr 1fr;">
             <div class="header-left">
-                <a class="button_no_border" id="open_pdf_menu">
-                    <img src="{% static 'tomikuvzpevnik/icons/pdf_songbook.svg' %}">
+                <a class="button_no_border square_medium" id="open_pdf_menu">
+                    <img src="{% static 'tomikuvzpevnik/icons/pdf_songbook.svg' %}" style="width:37px">
                 </a>
             </div>
             <div class="header-center">
