--- a/tomikuvzpevnik/static/tomikuvzpevnik/accountForm.css
+++ b/tomikuvzpevnik/static/tomikuvzpevnik/accountForm.css
@@ -23,18 +23,9 @@ label {
     margin-bottom: 5px;
 }
 
-input[type=text],
-select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    max-width: 300px;
-}
-
 input[type=password],
+input[type=text],
+input[type=email],
 select {
     width: 100%;
     padding: 12px 20px;
