--- a/tomikuvzpevnik/templates/tomikuvzpevnik/addSong.html
+++ b/tomikuvzpevnik/templates/tomikuvzpevnik/addSong.html
@@ -1,39 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    {% load static %}
-    <link rel="stylesheet" href=" {% static 'tomikuvzpevnik/utils.css' %}">
+{% extends "tomikuvzpevnik/base.html" %}
+{% load static %}
+{% block extra_head %}
     <link rel="stylesheet" href=" {% static 'tomikuvzpevnik/addSong.css' %}">
-    <title>Tomíkův zpěvník</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-    <div id="header">
-        <div class="header-left">
-            <a href="{% url 'tomikuvzpevnik:index' %}" id="return" class="button_with_border"><span><img
-                        src=" {% static 'tomikuvzpevnik/icons/back_arrow.svg' %}"
-                        style="width:50%;height:50%;margin-top:17px;" /></span></a>
-        </div>
-        <div class="header-right">
-
-        </div>
+{% endblock extra_head %}
+{% block header %}
+    <div class="header-left">
+        <a href="{% url 'tomikuvzpevnik:index' %}"
+           id="return"
+           class="button_with_border"><span>
+            <img src=" {% static 'tomikuvzpevnik/icons/back_arrow.svg' %}"
+                 style="width:50%;
+                        height:50%;
+                        margin-top:17px" />
+        </span></a>
     </div>
-    <h2 style="text-align:center">Tomíkův zpěvník</h3>
-        <h3 style="text-align:center">&#127925; Přidej písničku &#127925;</h3>
-        <form action="" method="post">
-            {% csrf_token %}
-            <div class="form">
-                {% for field in form %}
-                  <div class="input_field" id="form_{{ field.name }}"{% if field.errors %} style="background-color:#ffaaaa;border-radius:5px;" {% endif %}>
-                    {{ field.label_tag }} {{ field }}</div>
-                {% endfor %}
-                <input type="submit" class="button_with_border" value="Submit">
-            </div>
-        </form>
-        <!-- <a href="./index.html" owner=""><div class="song_ref">Zpět na index<span class="owner"></span></div>         -->
-</body>
-
-</html>
+    <div class="header-right"></div>
+{% endblock header %}
+{% block content %}
+    <h2>Tomíkův zpěvník</h2>
+    <h3>&#127925; Přidej písničku &#127925;</h3>
+    <form action="" method="post">
+        {% csrf_token %}
+        <div class="form">
+            {% for field in form %}
+                <div class="input_field"
+                     id="form_{{ field.name }}"
+                     {% if field.errors %}style="background-color:#ffaaaa;border-radius:5px;"{% endif %}>
+                    {{ field.label_tag }} {{ field }}
+                </div>
+            {% endfor %}
+            <input type="submit" class="button_with_border" value="Submit">
+        </div>
+    </form>
+{% endblock content %}
