--- a/tomikuvzpevnik/static/tomikuvzpevnik/accountForm.css
+++ b/tomikuvzpevnik/static/tomikuvzpevnik/accountForm.css
@@ -14,13 +14,15 @@ form{
 }
 
 form div {
+    text-align: left;
     width:100%;
     margin-bottom: 5px;
 }
 
 label {
+    padding-left:1em;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
 input[type=password],
@@ -29,11 +31,10 @@ input[type=email],
 select {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    max-width: 300px;
 }
 
 form button {
@@ -50,3 +51,10 @@ form button {
     margin-top: 10px;
     color: var(--accent2);
 } 
+
+.error-list{
+    color: var(--error);
+    font-size: 0.9rem;
+    list-style-type: none;
+    padding-inline-start:1em;
+}
