Email verification sign up

--- a/tomikuvzpevnik/templates/registration/account_activation_email.html
+++ b/tomikuvzpevnik/templates/registration/account_activation_email.html
@@ -1,10 +1,9 @@
-{% autoescape off %}
-Ahoj {{ user.username }},
+<p>Ahoj {{ user.username }},</p>
 
-Děkujeme za vytvoření účtu na Tomíkově zpěvníku! Abychom mohli aktivovat tvůj účet, prosíme, klikni na následující odkaz:
-
-https://{{ domain }}{% url 'tomikuvzpevnik:activate' uidb64=uid token=token %}
-
+<p>
+Děkujeme za vytvoření účtu na Tomíkově zpěvníku! Abychom mohli aktivovat tvůj účet, prosíme, klikni <a href="https://{{ domain }}{% url 'activate' uidb64=uid token=token %}">zde</a> pro aktivaci účtu.
+</p>
+<p>
 Děkujeme,
 Tomíkův zpěvník
-{% endautoescape %}
+</p>
