Fix email formatting

--- a/tomikuvzpevnik/templates/registration/account_activation_email.html
+++ b/tomikuvzpevnik/templates/registration/account_activation_email.html
@@ -4,6 +4,6 @@
 Děkujeme za vytvoření účtu na Tomíkově zpěvníku! Abychom mohli aktivovat tvůj účet, prosíme, klikni <a href="https://{{ domain }}{% url 'activate' uidb64=uid token=token %}">zde</a> pro aktivaci účtu.
 </p>
 <p>
-Děkujeme,
+Děkujeme,<br>
 Tomíkův zpěvník
 </p>
